--- a/content/artist-landing-page.mdx
+++ b/content/artist-landing-page.mdx
@@ -29,11 +29,11 @@ Have fun and rock on!
 
 <div id="contact" className="text-center">
 
-hello@bandname.com
+cowboygeneral@gmail.com
 
-**Booking:** +6281234567890
+**Booking:** 404-934-4663
 
-**Press:** +6281234567890
+**Press:** 770-998-7999
 
 </div>
 
